--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "@rocketseat/eslint-config/react",
   "rules": {
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "no-undef": "off"
   }
 }
